--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -231,6 +231,8 @@
                 </div>
             </footer>
         </div>
+
+        <div id="overlay" class="overlay"></div>
     </div>
 
 
@@ -253,12 +255,23 @@
                 theme: "minimal"
             });
 
+            // $('#collapseSidebar').on('click', function () {
+            //     $('#sidebar').toggleClass('active');
+            //     $('#bodyBlock').toggleClass('active');
+            //     $('.bars').toggleClass('active');
+            // });
+
             $('#collapseSidebar').on('click', function () {
                 $('#sidebar').toggleClass('active');
-                $('#bodyBlock').toggleClass('active');
+                $('#overlay').toggleClass('active');
                 $('.bars').toggleClass('active');
             });
 
+            $('#overlay').on('click', function () {
+                $('#sidebar').toggleClass('active');
+                $('#overlay').toggleClass('active');
+                $('.bars').toggleClass('active');
+            });
         });
     </script>
 
