Added navigation to students page

--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -166,7 +166,7 @@
             <div class="col-md-3 col-sm-6 d-flex justify-content-center py-2">
                 <button class="shadow btn btn-light btn-block btn-sq"
                         type ="submit"
-                        onclick="location.href = '#';">
+                        onclick="location.href = '{% url 'cs28:studentUpload' %}';">
                     <h1>UPLOAD</h1>
                     <br>
 
