Changed Course Grades button
Changed the "Student" button to "Course Grades" button- renamed it and changed the icon , changed the tab title and url to Course Grades

--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -194,11 +194,11 @@
             <div class="col-md-3 col-sm-6 d-flex justify-content-center py-2">
                 <button class="shadow btn btn-light btn-block btn-sq"
                         type ="submit"
-                        onclick="location.href = '{% url 'cs28:module_grades' %}';">
-                    <h1>STUDENTS</h1>
+                        onclick="location.href = '{% url 'cs28:course_grades' %}';">
+                    <h1>COURSE GRADES</h1>
                     <br>
 
-                    <i class="fas fa-book-reader"></i>
+                    <i class="fas fa-award"></i>
                     <br>
 
                     <h5>Go to...</h5>
