--- a/cs28_project/templates/module_grades.html
+++ b/cs28_project/templates/module_grades.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-    Module Marks page
+    Course Grades page
 
 
 
@@ -44,7 +44,7 @@
 
 
 {% block title_block %}
-Module grades
+Course grades
 {% endblock %}
 
 
@@ -52,7 +52,7 @@ Module grades
 <div class="mt-4 pb-5 container-fluid container-width bg-white">
     <div class="page-header row h-100 align-items-center bg-blue">
         <div class="page-text d-inline-flex text-white">
-            <h1>Module Grades</h1>
+            <h1>Course Grades</h1>
         </div>
     </div>
     <div class="row justify-content-between">
