--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -161,7 +161,7 @@
                 <!-- students -->
                 <li class="nav-item">
                     <div class="px-1 py-2">
-                        <a class="nav-link" href="{% url 'cs28:module_grades' %}">
+                        <a class="nav-link" href="{% url 'cs28:course_grades' %}">
                             <i class="fa-fw fas fa-book-reader"></i>
                             <p class="pl-2">Students</p>
                         </a>
