--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -163,7 +163,7 @@
                     <div class="px-1 py-2">
                         <a class="nav-link" href="{% url 'cs28:course_grades' %}">
                             <i class="fa-fw fas fa-book-reader"></i>
-                            <p class="pl-2">Students</p>
+                            <p class="pl-2">Grades</p>
                         </a>
                     </div>
                 </li>
