--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -195,7 +195,7 @@
                 <button class="shadow btn btn-light btn-block btn-sq"
                         type ="submit"
                         onclick="location.href = '{% url 'cs28:course_grades' %}';">
-                    <h1>COURSE GRADES</h1>
+                    <h1>GRADES</h1>
                     <br>
 
                     <i class="fas fa-award"></i>
