--- a/cs28_project/templates/base.html
+++ b/cs28_project/templates/base.html
@@ -162,7 +162,7 @@
                 <li class="nav-item">
                     <div class="px-1 py-2">
                         <a class="nav-link" href="{% url 'cs28:course_grades' %}">
-                            <i class="fa-fw fas fa-book-reader"></i>
+                            <i class="fa-fw fas fa-award"></i>
                             <p class="pl-2">Grades</p>
                         </a>
                     </div>
