--- a/cs28_project/templates/index.html
+++ b/cs28_project/templates/index.html
@@ -156,7 +156,7 @@
                     <h1>MANAGE</h1>
                     <br>
 
-                    <i class="fas fa-cogs"></i>
+                    <i class="fa-fw fas fa-cogs"></i>
                     <br>
 
                     <h5>Go to...</h5>
@@ -170,7 +170,7 @@
                     <h1>UPLOAD</h1>
                     <br>
 
-                    <i class="fas fa-upload"></i>
+                    <i class="fa-fw fas fa-upload"></i>
                     <br>
 
                     <h5>Go to...</h5>
@@ -184,7 +184,7 @@
                     <h1>DEGREES</h1>
                     <br>
 
-                    <i class="fas fa-graduation-cap"></i>
+                    <i class="fa-fw fas fa-graduation-cap"></i>
                     <br>
 
                     <h5>Go to...</h5>
@@ -198,7 +198,7 @@
                     <h1>GRADES</h1>
                     <br>
 
-                    <i class="fas fa-award"></i>
+                    <i class="fa-fw fas fa-award"></i>
                     <br>
 
                     <h5>Go to...</h5>
